--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   application:
     name: "eurekaserver"
   profiles:
-    active: "prod"
+    active: "default"
   config:
     import: "configserver:http://localhost:8071/"
