--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   application:
     name: "eurekaserver"
   profiles:
-    active: "default"
+    active: "native"
   config:
-    import: "configserver:http://localhost:8071/"
+    import: "configserver:${CONFIG_SERVER_URL:http://localhost:8071/}"
